# raspberry-pi-pico

pico/pico-led-control/: main.c
pico/pico-testing/: CMakeLists.txt  main.c
pico/pico-type-in/: main.c
pico/pico-ultrasonic/ultrasonic/: CMakeLists.txt
